# algo-and-struct

./: README.md  mindmap.drawio
Go-Algorithm/: README.md
Go-Algorithm/go-data-structure/arrays/: array.go
Go-Algorithm/go-data-structure/linked_list/: link_list.md  link_list_test.go
Go-Algorithm/leetcode-codes/: 4_sum.go
Go-Algorithm/leetcode-codes/commonfix/: longestCommonPrefix_test.go
Go-Algorithm/leetcode-codes/listnode/: mergetwolists.go
Go-Algorithm/leetcode-codes/palindrome/: isPalindrome.go  isPalindrome_test.go
Go-Algorithm/leetcode-codes/two_sum/: twoSum.go
Go-Algorithm/leetcode-codes/validbrackets/: isValidBracket.go  isValidBracket_test.go
Go-Algorithm/pkg/utils/: data_structure.go
Go-Algorithm/sort/quick_sort/: quick_sort.go
Go-Algorithm/sort/selection_sort/: selection.go
Go-Algorithm/sort/shell_sort/: shell.go
Go-Algorithm/sort/slelectionsort/: selection.go  selection_test.go
Go-Algorithm/sort/utils/: Helper.go
cc-algo/: .gitignore  CMakeLists.txt
cc-algo/c/array/: intersection.c  isAnagram.c  maxSubArray.c  merge.c  plusOne.c  removeElement.c  searchInsert.c  threeSum.c  twoSum.c
cc-algo/src/: CMakeLists.txt
cc-algo/src/hash_map/: first_miss_num.cpp  lru_cache.cpp  three_sum.cpp  twitter.cpp  two_sum.cpp
cc-algo/src/link_list/: link_list.h  merge_k_list.cpp  merge_two_list.cpp
cc-algo/test/: CMakeLists.txt
cc-algo/test/hash_map/: lru_cache_test.cpp  two_sum_test.cpp
go-algo/: README.md  go.mod  lib.go
go-algo/leetcode/: 4_sum.go
go-algo/structure/: bitmap.go  queue.go
py-algo/: two_sum.py
(+61 files in other folders)
